# discogram

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
examples/: config.toml.example  docker-compose.yml.example
src/: config.rs  daemon.rs  fetch.rs  main.rs  stateful.rs
