[package]
name = "discogram"
version = "0.1.0"
edition = "2021"

[dependencies]
digest = "0.10.7"
hex = "0.4.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
sha3 = "0.10.8"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.16"
